Minor frontend fixes main (#60)
* fixed testimonials components

* update testimonial component

+ added data mapping
+ added sample data

* rendered testimonial

* chore(testimonials): update testimonials content

* added 2 mentees:
   + sophia check
   + rifa jamal w/o headshot
- commented out mentors for the time being as there are none currently

* fix(testimonials): cropped img instead of stretched

* added the images, review and names of the mentees in the testimonials

* Added the pictures of the mentees

* chore: linting

* update testimonails.ts

added the mentor testimonials

* Fixed mentor testimonials

* added and fix mentor testimonials

* Fix all errors in mentor testimonials

* Fixed linting

* Added Footer Icons

added footer icons that when clicked, will take us to the social media sites and also added a dark red hover on the button

* Update Hover Animation & Icon Colors

updated the icon colors in the footer as well as adding hover animation on them

* Deleted Unused Code

Deleted an unused code in Home.module.css

* Updated hover

* Update index.tsx

* Finalized hover effects on all buttons on the home page

* Added Hover Effects

Added hover effects on all buttons

* added code to display countdown

* Added code to display countdown

* Edited Countdown.js

Reedited my code to delete repetitive code for countdown.js

* Deleted yarn.lock

---------

--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -1,3 +1,5 @@
+
+
 .main {
   display: flex;
   flex-direction: column;
@@ -128,11 +130,16 @@
 .button {
   background-color: var(--red);
   font-size: 1.3rem;
-  color: white;
+  color: rgb(255, 255, 255);
   padding: 1em;
   border-width: 0;
   border-radius: 15px;
   margin: auto;
+}
+
+.button:hover {
+  background-color: #a01616; 
+  color: white;
 }
 
 .navButton {
@@ -188,14 +195,15 @@
   float: left;
 }
 
-.footerIcons > div {
+.footerIcons > div{
   margin-right: 10px;
 }
 
-.footerIcons {
+.footerIcons{
   display: flex;
   flex-direction: row;
 }
+
 
 .footerButton {
   background-color: var(--red);
@@ -213,3 +221,4 @@
   position: relative;
   top: -2em;
 }
+
